--- a/accessibility.html
+++ b/accessibility.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Latest compiled and minified CSS -->
@@ -33,7 +33,7 @@
 			I <a href="theory.html">described them theoretically</a> as <em>a mapping from the sensory, cognitive, and social human world to these collections of functions exposed by a computer program</em>.
 			While that's true, most of the mappings we've discussed have been input via our fingers and output to our visual perceptual systems. Most user interfaces have largely ignored other sources of human action and perception.
 			We can speak, we can control over 600 different muscles, we can convey hundreds of types of non-verbal information through our gaze, posture, and orientation.
-			We can see, hear, taste, smell, sense pressure, sense temperature, sense balance, sense our position in space, feel pain, among dozens of other senses.
+			We can see, hear, taste, smell, sense pressure, sense temperature, sense balance, sense our position in space, and feel pain, among dozens of other senses.
 			This vast range of human abilities is largely unused in interface design.
 		</p>
 		
@@ -48,7 +48,7 @@
 			However, this bias is also unreasonable because not everyone can see, use their fingers precisely, or read text.
 			Designing interfaces that can <em>only</em> be used if one has these abilities means that vast numbers of people simply can't use interfaces (<a href="https://doi.org/10.1109/JPROC.2011.2182090">Ladner 2012</a>).
 			And this is no small population: according to a <a href="http://www.worldbank.org/en/topic/disability">2004 World Bank survey</a> (World Bank is an international financial institution that seeks to reduce poverty), one billion people (15% of humanity) has some form of disability.
-			That includes people who are blind, low-vision, color blind, deaf, hard of hearing, unable to speak, or posses speech impediments, inability to walk or use limbs, or have some form of cognitive disorder such as dyslexia, dysgraphia, dyscalulia, memory loss, or learning disabilities.
+			That includes people who are blind, low-vision, color blind, deaf, hard of hearing, unable to speak, or posses speech impediments, inability to walk or use limbs, or have some form of cognitive disorder such as dyslexia, dysgraphia, dyscalculia, memory loss, or learning disabilities.
 			This might describe you.
 			This might describe someone you know.
 			And if it doesn't, take off your glasses, remove your contacts, or wait until you're 70.
@@ -60,9 +60,10 @@
 			Most interfaces assume that their users have no disabilities.
 			And ironically, it's partly because the user interface toolkits we described in <a href="architecture.html">the last chapter</a> embed this assumption deep in their architecture.
 			Toolkits make it so easy to design graphical user interfaces that these are the only kind of interfaces designers make.
-			This results in most interfaces being difficult or sometimes impossible for vast populations to use (which really makes no business sense (<a href="https://doi.org/10.1145/2843590">Horton and Sloan 2015</a>).
+			This results in most interfaces being difficult or sometimes impossible for vast populations to use, which really makes no business sense (<a href="https://doi.org/10.1145/2843590">Horton and Sloan 2015</a>).
 			We use the word <strong>accessibility</strong> to refer to the extent to which an interface can be used by people regardless of their abilities.
-			We describe user interfaces as <strong>universal</strong> if they can be used by people with any abilities.
+			We describe user interfaces as <strong>universal</strong> if they can be used by people regardless of what combination of abilities they have. 
+			This definition is is unfortunately vague, but that is because it is aspirational: no interface can serve everyone, but with an intentional effort to be inclusive, we can usually serve many more than we would have otherwise.
 		</p>
 		
 		<p>
@@ -93,24 +94,25 @@
 			Unfortunately, conceiving of ways to use all of our senses and abilities is not easy.
 			It took us more than 20 years to invent graphical user interfaces optimized for sight and hands.
 			It's taken another 20 years to optimize touch-based interactions.
-			It's not surprising that it's taking us just as long or longer to invent seamless interfaces for speech, gesture, and other uses of our muscles, and efficient was of perceiving user interface output through hearing, feeling, and other senses.
+			It's not surprising that it's taking us just as long or longer to invent seamless interfaces for speech, gesture, and other uses of our muscles, and efficient ways of perceiving user interface output through hearing, feeling, and other senses.
 		</p>
 		
 		<p>
-			These inventions, however, are numerous, and span the full spectrum of modalities.
-			For instance, screen readers have been around since shortly after <a href="https://www.section508.gov/content/learn">Section 508</a> of the Rehabilitation Act of 1973, and have converted digital text into synthesized speech.
+			These inventions, however, are numerous and span the full spectrum of modalities.
+			For instance, access technologies like screen readers have been around since shortly after <a href="https://www.section508.gov/content/learn">Section 508</a> of the Rehabilitation Act of 1973, and have converted digital text into synthesized speech.
 			This has made it possible for people who are blind or have low-vision to interact with graphical user interfaces.
 			But now, interfaces go well beyond desktop GUIs.
-			For example, just before the ubiquity of touch screens, the SlideRule system showed how to make touch screens accessible to blind users by reading labels of UI throughout multi-touch (<a href="http://dx.doi.org/10.1145/1414471.1414487">Kane et al. 2008</a>). This research impacted the design of Apple's VoiceOver functionality in iOS, which influenced other Microsoft and Google to add multi-touch screen reading to Android and Windows.
+			For example, just before the ubiquity of touch screens, the SlideRule system showed how to make touch screens accessible to blind users by reading labels of UI throughout multi-touch (<a href="http://dx.doi.org/10.1145/1414471.1414487">Kane et al. 2008</a>). This research impacted the design of Apple's VoiceOver functionality in iOS, which influenced Microsoft and Google to add multi-touch screen reading to Windows and Android.
+			These advances in access technologies, especially when built in at the operating system level, have greatly increased the diversity of people who can access computing. 
 		</p>
 		
 		<p class="embed-responsive embed-responsive-16by9">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/Wy0656j2eig" frameborder="0" allowfullscreen></iframe>
-			<center>VisLens (Guo et al. 2016)</center>
+			<center>VizLens (Guo et al. 2016)</center>
 		</p>
 		
 		<p>
-			For decades, screen readers have only worked on computers, but recent innovations like VizLens (above) have combined machine vision and crowdsourcing to support arbitrary interfaces in the world, including such as microwaves, refrigerators, ATMs, and other appliance (<a href="https://doi.org/10.1145/2984511.2984518">Guo et al. 2016</a>).
+			For decades, screen readers have only worked on computers, but recent innovations like VizLens (above) have combined machine vision and crowdsourcing to support arbitrary interfaces in the world, such as microwaves, refrigerators, ATMs, and other appliances (<a href="https://doi.org/10.1145/2984511.2984518">Guo et al. 2016</a>).
 			Innovations like this allow users to capture the interface with a camera, then get interactive guidance of the layout and labels of the interface. Solutions like this essentially provide screen reading for anything in the world, converting visual interfaces into auditory ones.
 		</p>
 
@@ -118,15 +120,19 @@
 			With the rapid rise in popularity of the web, web accessibility has also been a popular topic of research.
 			Problems abound: images on the web often come without "alt" tags that describe the image for people unable to see.
 			User interface controls often lack labels for screen readers to read.
-			Researchers have therefore invented ways of infer these descriptions and labels by mining the surrounding context of a page for a reasonable description (<a href="https://doi.org/10.1145/1866029.1866041">Islam et al. 2010</a>).
+			Researchers have therefore invented ways of inferring these descriptions and labels by mining the surrounding context of a page for a reasonable description (<a href="https://doi.org/10.1145/1866029.1866041">Islam et al. 2010</a>).
 			People with low-vision often just need magnification of content.
 			While web browsers allow people to increase text size, this often breaks the layout of pages, and so researchers have invented ways of automatically resizing images and text to a size that doesn't break layout, improving readability automatically (<a href="https://doi.org/10.1145/2642918.2647357">Bigham 2014</a>).
+			One way to view these innovations is as bandages to accessibility flaws at the architectural level.
+			For example, why is it valid to leave an “alt” tag empty in HTML?
+			Why do HTML layout algorithms allow text to overlap?
+			Little work has considered how to design architectures, user interface tools, and toolkits that prevent accessibility problems.
 		</p>
 
 		<p>
-			For people who are deaf or hard of hearing, videos, dialog, or other audio output of interfaces are a major accessibility barrier to using computers or engaging in computer-mediated communication.
+			For people who are deaf or hard of hearing, videos, dialog, or other audio output interfaces are a major accessibility barrier to using computers or engaging in computer-mediated communication.
 			Researchers have invented systems like Legion:Scribe, which harness crowd workers to provide real-time captioning of arbitrary audio streams with only a few seconds of latency (<a href="https://doi.org/10.1145/2380116.2380122">Lasecki et al. 2012</a>).
-			People who are deaf may also use sign language, but computer-mediated communication like video chat is often too low-latency to provide the frame rates and resolution sufficient to read signs.
+			People who are deaf may also use sign language, but computer-mediated communication like video chat often has insufficient frame rates and resolution to read signs.
 			Researchers have invented video compression algorithms that optimize for detail in hands at the expense of other visual information (<a href="https://doi.org/10.1145/1622176.1622192">Cherniavsky et al. 2009</a>).
 			Not only did this technique make it more feasible for people to sign via low-frame-rate video chat, but the compression algorithm also increased battery life by 47% by reducing bandwidth requirements.
 		</p>
@@ -140,7 +146,7 @@
 			For people who have motor impairments, such as <a href="https://www.youtube.com/watch?v=-Y3kex_8UoY">motor tremors</a>, fine control over mouse, keyboards, or multi-touch interfaces can be quite challenging, especially for tasks like text-entry, which require very precise movements.
 			Researchers have explored several ways to make interfaces more accessible for people without fine motor control. EdgeWrite, for example, is a gesture set (shown above) that only requires tracing the edges and diagonals of a square (<a href="https://doi.org/10.1145/964696.964703">Wobbrock et al. 2003</a>).
 			This stabilizes motion even in the presence of tremors, significantly increasing text entry speed and correctness.
-			To make mouse and touch-based interfaces more accessible, systems like SUPPLE aimed to model users' motor control abilities, and use that model to generate a custom interface layout that made user interface controls easier to click, while preventing accidental clicks (<a href="https://doi.org/10.1145/1294211.1294253">Gajos et al. 2007</a>).
+			To make mouse and touch-based interfaces more accessible, systems like SUPPLE aimed to model users' motor control abilities, and used that model to generate a custom interface layout that made user interface controls easier to click, while preventing accidental clicks (<a href="https://doi.org/10.1145/1294211.1294253">Gajos et al. 2007</a>).
 			SmartTouch used a similar approach, modeling how people with a wide range of motor impairments touched touch-screens, and adapting the algorithms that inferred the intended touch point based on these models (<a href="https://doi.org/10.1145/2858036.2858390">Mott et al 2016</a>).
 			Both SUPPLE and SmartTouch are example of <em>ability-based design</em>, in which the user interface models the user and adapts itself to the users' abilities (<a href="http://dx.doi.org/10.1145/1952383.1952384">Wobbrock et al. 2011</a>).
 		</p>
@@ -192,8 +198,7 @@
 			
 		<p>Walter Lasecki, Christopher Miller, Adam Sadilek, Andrew Abumoussa, Donato Borrello, Raja Kushalnagar, and Jeffrey Bigham. 2012. <a href="https://doi.org/10.1145/2380116.2380122">Real-time captioning by groups of non-experts</a>. In Proceedings of the 25th annual ACM symposium on User interface software and technology (UIST '12). ACM, New York, NY, USA, 23-34.</p>
 
-		<p>Martez E. Mott, Radu-Daniel Vatavu, Shaun K. Kane, and Jacob O. Wobbrock. 2016. <a href="https://doi.org/10.1145/2858036.2858390">Smart Touch: Improving Touch Accuracy for People with Motor Impairments with Template Matching</a>. In Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems (CHI '16). ACM, New York, NY, USA, 1934-1946.</p<>
-
+		<p>Martez E. Mott, Radu-Daniel Vatavu, Shaun K. Kane, and Jacob O. Wobbrock. 2016. <a href="https://doi.org/10.1145/2858036.2858390">Smart Touch: Improving Touch Accuracy for People with Motor Impairments with Template Matching</a>. In Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems (CHI '16). ACM, New York, NY, USA, 1934-1946.</p>
 
 		<p>Amanda Swearngin, Andrew J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
 
